--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -14,6 +14,7 @@
             </intent-filter>
         </activity>
         <activity android:name="LoginActivity"></activity>
+        <activity android:name="ProfileActivity"></activity>
 
     </application>
 </manifest>
