--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -15,6 +15,7 @@
         </activity>
         <activity android:name="LoginActivity"></activity>
         <activity android:name="ProfileActivity"></activity>
+        <activity android:name="RegisterItemActivity"></activity>
 
     </application>
 </manifest>
